# THaMES

./: README.md  pyproject.toml  questiontypes.md  requirements.txt
src/: CoVe.py  document.py  evaluate_refactored.py  finetune.py  generate_wikipedia_text.py  knowledge_base.py  metric.py  model.py  pipeline.py  prompts.py  qa_pair_generator.py
tests/: integration_tests.py  testing_plan.md  unit_tests.py
tutorials/: LISTOFTUTORIALS.md
